--- a/PizzaStore/Views/Shared/_Layout.cshtml
+++ b/PizzaStore/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pizza" asp-action="Index">Pizza</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pizza" asp-action="PizzaTypes">Pizza Types</a>
+                        </li>
                     </ul>
                 </div>
             </div>
