--- a/PizzaStore/Views/Shared/_Layout.cshtml
+++ b/PizzaStore/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pizza" asp-action="Orders">Orders</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pizza" asp-action="OrderDetails">Order Details</a>
+                        </li>
                     </ul>
                 </div>
             </div>
