--- a/PizzaStore/Views/Pizza/Orders.cshtml
+++ b/PizzaStore/Views/Pizza/Orders.cshtml
@@ -33,3 +33,14 @@
         }
     </tbody>
 </table>
+
+<div>
+    <ul class="pagination">
+        @for (int i = 1; i <= ViewBag.TotalPages; i++)
+        {
+            <li class="@(i == ViewBag.PageNumber ? "active" : "")">
+                @Html.ActionLink(i.ToString(), "Orders", new { page = i })
+            </li>
+        }
+    </ul>
+</div>
